Added a new screen with a new ViewModel to study the ReactiveMemory Leaks

--- a/ReactiveIOSTest/ReactiveIOSTest.csproj
+++ b/ReactiveIOSTest/ReactiveIOSTest.csproj
@@ -137,6 +137,8 @@
     <Compile Include="ViewModels\BaseViewModel.cs" />
     <Compile Include="Views\ScreenStart.cs" />
     <Compile Include="Services\ColorToIosNativeConverter.cs" />
+    <Compile Include="Views\ScreenFinal.cs" />
+    <Compile Include="ViewModels\ScreenFinalViewModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Insights.1.11.4\build\Xamarin.iOS10\Xamarin.Insights.targets" Condition="Exists('..\packages\Xamarin.Insights.1.11.4\build\Xamarin.iOS10\Xamarin.Insights.targets')" />
